--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,8 +1,20 @@
-body {
-  display: flex;
-  gap: 15px;
+.box_WINNER {
+  border: 4px solid green;
+  border-radius: 5px;
 }
 
-div {
-  border: 1px solid black;
+.box_LOSER {
+  border: 4px solid red;
+  border-radius: 5px;
+}
+
+.box_DRAW {
+  border: 4px solid black;
+  border-radius: 5px;
+}
+
+.item-img {
+  width: 400px;
+  height: 300px; /* 세로 비율 자동 조정 */
+  object-fit: contain;
 }
